<resources>
    <string name="app_name">成都作业区</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_rc_creat">RcCreatActivity</string>
    <string name="title_activity_vmaint_create">VMaintCreateActivity</string>
    <string name="title_activity_vmaint_detail">VMaintDetailActivity</string>
    <string name="title_activity_vpatrol_create">VPatrolCreateActivity</string>
    <string name="title_activity_vpatrol_detail">VPatrolDetailActivity</string>
    <string name="title_activity_pl_curve_creat">PlCurveCreatActivity</string>
    <string name="title_activity_pl_curve_detail">PlCurveDetailActivity</string>
    <string name="title_activity_rc_list">RcListActivity</string>
    <string name="title_activity_insulation_elec">绝缘法兰通电点电位</string>
    <string name="notification_studys">学习和通知</string>
    <string name="one_list_check">一事一案管理列表查看</string>
    <string name="one_info_manage">一式一案信息收集</string>
    <string name="one_manage_check">一式一案管理查看</string>
    <string name="reply">回复</string>
    <string name="upload_file">上传附件</string>
    <string name="download_file">下载</string>
    <string name="enter_software">进入软件</string>
    <string name="welcome">欢迎使用</string>
    <string name="text_titles">标题:</string>
    <string name="text_publisher">发布人:</string>
    <string name="text_mark">批注:</string>
    <string name="replier">回复人:</string>
    <string name="reply_content">回复内容:</string>
    <string name="ask_member">请示人:</string>
    <string name="check_result">审核结果:</string>
    <string name="uploading_wait">页面加载中，请稍候…</string>
    <string name="login_name">管道管理系统</string>
    <string name="btn_login">登录</string>
    <string name="pass_name">请输入您的账号</string>
    <string name="pass_word">请输入你的密码</string>
    <string name="remember_password">记住密码</string>
    <string name="now_password">当前密码:</string>
    <string name="new_password">新密码:</string>
    <string name="verify_password">确认密码:</string>
    <string name="verify_ok">确认修改</string>
    <string name="menu_notification">通知</string>
    <string name="menu_base">基础</string>
    <string name="menu_temp">临时</string>
    <string name="menu_one">案件</string>
    <string name="menu_high">后果</string>
    <string name="new_version_hint">发现新版本，是否更新？</string>
    <string name="now_update">立即更新</string>
    <string name="next_time">暂不更新</string>
    <string name="jichuziliao1">基础资料</string>
    <string name="jichuziliao1_text1">管道保护电位测量记录</string>
    <string name="jichuziliao1_text2">管道保护电位曲线图</string>
    <string name="jichuziliao1_text3">绝缘接头(法兰)性能测量记录</string>
    <string name="jichuziliao1_text4">阴极保护站运行月综合记录</string>
    <string name="jichuziliao1_text5">阴极保护站运行记录</string>
    <string name="jichuziliao1_text6">集输气管线附属设施台账</string>
    <string name="jichuziliao1_text7">管线巡检工作记录</string>
    <string name="title_activity_vmaint_list">阀室、阀井维护保养工作记录</string>
    <string name="title_activity_vp_work_record">阀室、阀井巡检工作记录</string>
    <string name="title_activity_pl_list">管道保护电位曲线图</string>
    <string name="title_activity_vp_list">阀室、阀井巡检工作记录</string>
    <string name="new_create">新建</string>
    <string name="pipe_name">管线名称:</string>
    <string name="start_end_paragragh">起止段落:</string>
    <string name="pipe_specification">管线规格:</string>
    <string name="well_station">井(站):</string>
    <string name="creater">填报人:</string>
    <string name="verifier">审核人:</string>
    <string name="verify_desc">审核内容:</string>
    <string name="create_time">创建时间:</string>
    <string name="date_year">年:</string>
    <string name="date_years">年</string>
    <string name="date_month">月</string>
    <string name="year_month">年月:</string>
    <string name="state_pass">状态:</string>
    <string name="choose_pipe_info">请先选择管线名称信息</string>
    <string name="back_btn">&lt;</string>
    <string name="next_step">下一步</string>
    <string name="record_time">时间:</string>
    <string name="valve_name">阀室名称:</string>
    <string name="protect_station">保护井(站):</string>
    <string name="save">保存</string>
    <string name="add">继续添加</string>
    <string name="date">日期:</string>
    <string name="work_position">*工作地段(点):</string>
    <string name="work_content">工作内容:</string>
    <string name="question_deal">发现问题及处理情况:</string>
    <string name="voice_record">语音记录栏:</string>
    <string name="worker">工作人:</string>
    <string name="picture">图片:</string>
    <string name="test_number">*测试桩编号:</string>
    <string name="measure_date">测量日期:</string>
    <string name="save_unit">保存单位:</string>
    <string name="save_deadline">*保存期限:</string>
    <string name="potential_v">电位(-v):</string>
    <string name="cathode_pro_dps">阴极保护站输出:</string>
    <string name="pipeline_a">A:</string>
    <string name="pipeline_v">V:</string>
    <string name="power_on_v">通电点(-v):</string>
    <string name="measurer">测量人:</string>
    <string name="remarker">备注:</string>
    <string name="position">位置:</string>
    <string name="protect_end">保护端(-v):</string>
    <string name="unprotect_end">未保护端(-v):</string>
    <string name="power_on_end">通电点电位(-v):</string>
    <string name="should_apply_time">应送电时间(h):</string>
    <string name="actual_apply">实送电(h):</string>
    <string name="waidian_poweroff">外电停电(h):</string>
    <string name="leiji_poweroff">雷击停电(h):</string>
    <string name="jizhang_poweroff">机障停电(h):</string>
    <string name="fangleijiance">防雷检查停电(h):</string>
    <string name="jianceguanxian">检测管线停电(h):</string>
    <string name="other_poweroff">其他停电(h):</string>
    <string name="output_max_a">输出最高(A):</string>
    <string name="output_min_a">输出最低(A):</string>
    <string name="a_average">月平均(A):</string>
    <string name="output_max_v">输出最高(V):</string>
    <string name="output_min_v">输出最低(V):</string>
    <string name="v_average">月平均(V):</string>
    <string name="potential_max">通电点最高(V):</string>
    <string name="potential_min">通电点最低(V):</string>
    <string name="apply_rate">送电率(%):</string>
    <string name="power_on_pro_rate">通电保护率(%):</string>
    <string name="equipment_rate">设备完好率(%):</string>
    <string name="run_analysis">运行分析:</string>
    <string name="program_type">项目类别:</string>
    <string name="join_member">参加人员:</string>
    <string name="question_explain">存在问题及说明:</string>
    <string name="first_potential">上旬电位(-v):</string>
    <string name="last_potential">下旬电位(-v):</string>
    <string name="text_day">日</string>
    <string name="text_hour">时</string>
    <string name="alternating_voltage">交流电压(-v):</string>
    <string name="dc_output">直流输出:</string>
    <string name="recorder">记录人:</string>
    <string name="events_point">大事记要:</string>
    <string name="maintaince_replacement">维护换机等情况:</string>
    <string name="check_content">审核内容:</string>
    <string name="extra_file">附件:</string>
    <string name="valva_check">阀室流程检查</string>
    <string name="push_on_off">压力表、执行机构引压开关开启</string>
    <string name="equipment_omission">设备验漏</string>
    <string name="valva_resource">阀室上墙资料是否齐全</string>
    <string name="valva_ventilate">阀室是否通风，阀室内是否有沉降</string>
    <string name="tool_effective">工用具、材料配置齐备，灭火器配置并有效</string>
    <string name="identification_intact">外墙标识、标语完好，门窗是否完好</string>
    <string name="valva_clean">阀室、放空区清洁卫生</string>
    <string name="lock_steady">拉锁是否紧固</string>
    <string name="valva_identification">阀室、放空区、阀室至放空区管线是否标识齐全，周边建构筑物是否满足安全距离</string>
    <string name="empty_clean">放空区除草、清洁</string>
    <string name="cover_intact">标志桩、盖板是否完好</string>
    <string name="leakage_check">泄漏及锈蚀检查</string>
    <string name="normal">正常(完好):</string>
    <string name="abnormal_deal">异常及处理情况:</string>
    <string name="title_activity_pl_curve">PlCurveActivity</string>
    <string name="title_activity_pl_curve_list">PlCurveListActivity</string>
    <string name="title_activity_fmaint_list">FMaintListActivity</string>
    <string name="title_activity_fmaint_create">FMaintCreateActivity</string>
    <string name="title_activity_fmaint_detail">FMaintDetailActivity</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_upload_file">UploadFileActivity</string>
    <string name="title_activity_tmp_notice">TmpNoticeActivity</string>
    <string name="title_activity_notice_list">NoticeListActivity</string>
    <string name="title_tmp_list">闭环及临时性工作列表查看</string>
    <string name="title_ask_list">闭环及临时性工作请示列表查看</string>
    <string name="title_activity_tmp_notice_detail">TmpNoticeDetailActivity</string>
    <string name="title_activity_ask_notice_detail">AskNoticeDetailActivity</string>
    <string name="title_activity_ask_notice_creat">AskNoticeCreatActivity</string>
    <string name="number">编号:</string>
    <string name="type">类别:</string>
    <string name="check_number">检查头里程桩号:</string>
    <string name="longitude">经度:</string>
    <string name="latitude">纬度:</string>
    <string name="structure_mode">结构形式:</string>
    <string name="equipment_description">设施现状描述:</string>
    <string name="fix_time">维修时间:</string>
    <string name="fix_situation">维修状况:</string>
    <string name="self_location">所处地址:</string>
    <string name="upload_image">上传图片</string>
    <string name="choose_image">选择图片</string>
    <string name="test_date">请选择测量日期</string>
    <string name="must_creater">填报人:</string>
    <string name="must_verifier">审核人:</string>
    <string name="search_hint_info">请选择管线名称等信息</string>
    <string name="must_well_station">井（站）:</string>
    <string name="modify_password">修改密码</string>
    <string name="exit_login">注销登录</string>
    <string name="please_check_number">请填写头里程桩编号</string>
    <string name="please_choose_date">请选择日期</string>
    <string name="please_work_place">请填写工作地点</string>
    <string name="must_recoder">记录人:</string>
    <string name="write_resource_hint">请填写编号</string>
    <string name="list_valva_name">阀室名称:</string>
    <string name="list_unit_name">单位名称:</string>
    <string name="list_month">月份:</string>
    <string name="reply_sumit">提交</string>
    <string name="reply_content_hint">*请输入回复内容:</string>
    <string name="high_manage">高后果区</string>
    <string name="static_high_resource">静态高后果区资料</string>
    <string name="dynamic_high_resource">动态高后果区资料</string>
    <string name="recognitioner">识别人:</string>
    <string name="static_high_number">高后果区编号:</string>
    <string name="high_manager">管理人员:</string>
    <string name="high_manger_phone">管理人员电话:</string>
    <string name="manage_unit">管理单位:</string>
    <string name="paragragh_name">管段名称:</string>
    <string name="start_longitude">起点经度:</string>
    <string name="start_latitude">起点纬度:</string>
    <string name="end_longitude">终点经度:</string>
    <string name="end_latitude">终点纬度:</string>
    <string name="high_start">高后果区起点(m):</string>
    <string name="high_end">高后果区终点(m):</string>
    <string name="high_length">高后果区长度(m):</string>
    <string name="high_score">高后果区得分:</string>
    <string name="high_position">地名:</string>
    <string name="high_feature">高后果区特征描述:</string>
    <string name="recognition_update_time">识别或更新时间:</string>
    <string name="scene_photo_one">现场照片1:</string>
    <string name="scene_photo_two">现场照片2:</string>
    <string name="scene_photo_three">现场照片3:</string>
    <string name="scene_photo_four">现场照片4:</string>
    <string name="scene_photo_five">现场照片5:</string>
    <string name="choose_file">选择附件</string>
    <string name="uploading">正在加载</string>
    <string name="temporary_work_ask">请示</string>
    <string name="text_title">标题:</string>
    <string name="text_content">内容:</string>
    <string name="add_file">添加附件:</string>
    <string name="choose_add_file">选择需要添加的附件</string>
    <string name="have_chosen_file">所选附件:</string>
    <string name="ask_type">请示类型:</string>
    <string name="message_alert">短信提醒:</string>
    <string name="alert_yes">是</string>
    <string name="alert_no">否</string>
    <string name="check_date">检查日期:</string>
    <string name="report_leader">汇报技术干部:</string>
</resources>