<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <Button
        android:id="@+id/selectImage"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:background="@drawable/btn_border"
        android:text="@string/choose_image"
        android:textSize="16sp" />

    <Button
        android:id="@+id/uploadImage"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/btn_border"
        android:text="@string/upload_image"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/btn_border"
        android:text="@string/btn_login"
        android:textSize="16sp" />

</LinearLayout>