<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"  
    android:layout_width="fill_parent"  
    android:layout_height="fill_parent"
    android:background="@color/text_bg"
    tools:context="com.oil.activity.AskNoticeCreatActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:background="@color/title_bg" >

        <Button
            android:id="@+id/bt_back"
            android:background="@drawable/bt_back"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/textView1"
            android:gravity="center"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:text="@string/temporary_work_ask" />
        
        <Button
            android:id="@+id/bt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:text="@string/save"
            android:textColor="@color/jichu_bg"
            android:textSize="18sp" />

    </RelativeLayout>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@color/jichu_bg"
            android:orientation="horizontal" >
          
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="18sp"
            android:text="@string/text_title" />

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textSize="18sp"
            android:padding="5dp"
            android:inputType="textMultiLine"
            android:maxLines="50"
            android:background="@drawable/multi_edittext_border"/>

        </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:padding="5dp"
        android:background="@color/jichu_bg"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="18sp"
            android:text="@string/text_content" />

        <EditText
            android:id="@+id/et_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="6000"
            android:gravity="top|left"
            android:textSize="18sp"
            android:padding="5dp"
            android:background="@drawable/multi_edittext_border"
            android:inputType="textMultiLine" />

    </LinearLayout>
    
    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:background="@color/jichu_bg"
        android:orientation="horizontal" >
            
	        <TextView
	            android:id="@+id/textView6"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="right"
	            android:textSize="18sp"
	            android:text="@string/add_file" />

        <Button
            android:id="@+id/bt_file"
            android:layout_width="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:textColor="#fff"
            android:background="@drawable/btn_border"
            android:text="@string/choose_add_file" />
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/lin_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:padding="5dp"
        android:visibility="gone"
        android:background="@color/jichu_bg"
        android:orientation="horizontal" >
            
	        <TextView
	            android:id="@+id/txt_td"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="right"
	            android:textSize="18sp"
	            android:text="@string/have_chosen_file" />
        
        <TextView
            android:id="@+id/txt_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textSize="16sp"/>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:background="@color/jichu_bg"
        android:orientation="horizontal" >
            
	        <TextView
	            android:id="@+id/textView9"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="right"
	            android:textSize="18sp"
	            android:text="@string/ask_type" />

        <Spinner
            android:id="@+id/sp_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"/>
        
    </LinearLayout>
    
    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:padding="5dp"
        android:background="@color/jichu_bg"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="18sp"
            android:text="@string/message_alert" />

            <RadioGroup 
                android:id="@+id/rg_warn"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            
            <RadioButton
                android:id="@+id/rd_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/alert_yes" />
            
            <RadioButton
                android:id="@+id/rd_n"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/alert_no" />
			</RadioGroup>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:background="#ffffff"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textSize="18sp"
            android:text="@string/report_leader" />

        <com.oil.layout.LineBreakLayout
	        android:id="@+id/lin_check"
	        android:layout_width="match_parent"
	        android:layout_height="200dp" >
    	</com.oil.layout.LineBreakLayout>
    	</LinearLayout>
    	</LinearLayout>
    </ScrollView>
</LinearLayout>
