<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="200dp"
    android:background="@drawable/bg_dialog"
    android:gravity="bottom"
    android:orientation="vertical" >

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:text="@string/new_version_hint"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:gravity="bottom|center_horizontal" >

        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/next_time"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt_check"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/now_update"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>