<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/jichu_bg"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context="com.oil.activity.FMaintCreateActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:background="@color/title_bg" >

        <Button
            android:id="@+id/bt_back"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/bt_back"
            android:text="" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/jichuziliao1_text6"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/choose_pipe_info" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="@color/text_bg" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow android:layout_marginTop="5dp"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:padding="5dp"
                android:text="@string/pipe_name"
                android:textSize="18sp" />

            <LinearLayout android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:padding="5dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">
            <Spinner
                android:id="@+id/sp_pl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"  />
            </LinearLayout>
        </TableRow>

        <TableRow android:layout_marginTop="5dp"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:padding="5dp"
                android:text="@string/start_end_paragragh"
                android:textSize="18sp" />

            <LinearLayout android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:padding="5dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">
            <Spinner
                android:id="@+id/sp_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null" />
            </LinearLayout>
        </TableRow>

        <TableRow android:layout_marginTop="5dp"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:padding="5dp"
                android:text="@string/pipe_specification"
                android:textSize="18sp" />

            <LinearLayout android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:padding="5dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">
            <Spinner
                android:id="@+id/sp_spec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"  />
            </LinearLayout>
        </TableRow>

        <TableRow android:layout_marginTop="5dp"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="5dp"
                android:textSize="18sp"
                android:text="@string/must_well_station" />

            <EditText
                android:id="@+id/et_jinzhan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:inputType="text"
                android:padding="7dp"
                android:maxLength="50"
                android:singleLine="true"
                android:layout_marginRight="30dp"
                android:textSize="18sp" />
        </TableRow>

        <TableRow android:layout_marginTop="5dp"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="5dp"
                android:textSize="18sp"
                android:text="@string/check_date" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:layout_marginRight="30dp"
                android:padding="7dp"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/bt_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/btn_border"
        android:text="@string/next_step"
        android:textColor="@color/jichu_bg"
        android:textSize="18sp" />

</LinearLayout>